[project]
name = "kombu-asyncio"
version = "6.0.0a2"
description = "Pure asyncio messaging library for Python"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = [
  "messaging",
  "asyncio",
  "redis",
  "queue",
  "async",
  "python",
  "celery",
]
authors = [{ name = "Ask Solem", email = "auvipy@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
]
dependencies = []

[project.urls]
Changelog = "https://github.com/oliverhaas/kombu/blob/main-asyncio/Changelog.rst"
Source = "https://github.com/oliverhaas/kombu"

[project.optional-dependencies]
# Transport dependencies
redis = ["redis>=7.1.0"]
# Serialization formats
msgpack = ["msgpack"]
yaml = ["PyYAML>=3.10"]

[dependency-groups]
dev = [
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "redis>=7.1.0",
  "ruff==0.14.10",
  "ty==0.0.8",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kombu"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
explicit-preview-rules = true
fixable = ["ALL"]
ignore = [
  "A001",    # Variable shadowing builtin - legacy patterns
  "A002",    # Argument shadowing builtin - legacy patterns
  "ANN",     # Type annotations - legacy code not fully annotated
  "ARG001",  # Signal handlers and overrides have required signatures
  "ARG002",
  "B007",    # Loop variable not used - sometimes intentional
  "B904",    # Raise from - legacy exception handling
  "BLE001",  # Catching blind exceptions - sometimes needed
  "C901",    # Some functions are inherently complex
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstring rules - existing code lacks comprehensive docstrings
  "E5",      # 120 char limit is sufficient
  "EM101",   # Extracting exception messages to variables hurts readability
  "EM102",
  "ERA001",  # Commented-out code - keeping for reference
  "FBT001",  # Boolean traps - too many violations, breaks compatibility
  "FBT002",
  "FIX002",  # TODO comments - allowed
  "N801",    # Class naming follows kombu conventions
  "N802",    # Function naming follows kombu conventions
  "N803",    # Argument naming follows kombu conventions
  "N806",    # Variable naming follows kombu conventions
  "N818",    # Exception naming follows kombu conventions
  "PERF203", # Try-except in loop - sometimes needed
  "PGH004",  # Legacy noqa comments
  "PLC0415", # Lazy imports for optional dependencies
  "PLR0913", # Too many arguments - messaging APIs need many options
  "PLR1704", # Redefining argument in context manager
  "PLW2901", # Redefining loop variable - sometimes intentional
  "PTH",     # Pathlib - legacy code uses os.path
  "PYI024",  # namedtuple usage follows kombu patterns
  "PYI034",  # __aenter__ return type - legacy patterns
  "RET503",  # Missing explicit return - legacy patterns
  "RSE102",  # Unnecessary parentheses on raised exception
  "RUF005",  # Tuple concatenation is clearer
  "RUF012",  # Mutable class attributes - used intentionally
  "RUF013",  # Implicit Optional - legacy patterns
  "RUF015",  # Readability over micro-optimization
  "RUF059",  # Keep unused variables explicit
  "S101",    # Assert in non-test code - sometimes used
  "S110",    # Try-except-pass - sometimes needed
  "SIM105",  # contextlib.suppress - legacy patterns
  "SIM108",  # Ternary operator - keep explicit if/else
  "SIM212",  # Negated condition - keep as is
  "SLF001",  # Private member access needed for redis-py internals
  "T201",    # Print statements - for debugging
  "TC003",   # Move import into TYPE_CHECKING - legacy patterns
  "TD002",   # TODO author - not needed
  "TD003",   # TODO issue link - not needed
  "TRY003",  # Long exception messages are fine
  "TRY300",  # Try-except in else - legacy patterns
  "UP031",   # Printf-style formatting - keep for consistency
  # Additional legacy patterns to ignore
  "A004",    # Import shadowing builtin
  "ARG003",  # Unused class method argument
  "ARG005",  # Unused lambda argument
  "B018",    # Useless expression
  "B025",    # Duplicate exception handler
  "B027",    # Empty method in abstract class - intentional concrete defaults
  "B028",    # No stacklevel in warnings
  "B905",    # Zip without strict
  "C408",    # Unnecessary dict call
  "DTZ005",  # Datetime without timezone
  "E402",    # Module level import not at top
  "EM103",   # Exception string formatting
  "F821",    # Undefined name (usually TYPE_CHECKING)
  "F822",    # Undefined name in __all__
  "FIX001",  # FIXME comments
  "FIX003",  # XXX comments
  "G001",    # Logging string format
  "G004",    # Logging f-string
  "G201",    # Logging .exception with exc_info
  "ISC002",  # Implicit string concatenation
  "LOG014",  # Logging extra argument
  "N804",    # First argument of classmethod
  "N805",    # First argument of method
  "N812",    # Lowercase imported as non-lowercase
  "N813",    # Camelcase imported as lowercase
  "N999",    # Invalid module name
  "PERF102", # Dictionary keys as set
  "PGH003",  # Type: ignore without code
  "PLC0205", # __slots__ expected class variables
  "PLR0912", # Too many branches
  "PLR1714", # Consider merging comparisons
  "PLR2004", # Magic value comparison
  "PLW0603", # Global statement
  "PLW1508", # Invalid envvar default
  "PLW1641", # Object without __hash__
  "PYI018",  # Unused TypeVar
  "PYI036",  # Star annotation
  "RET504",  # Unnecessary variable before return
  "RUF003",  # Ambiguous unicode character
  "RUF006",  # asyncio.create_task without reference
  "RUF022",  # __all__ not sorted
  "RUF046",  # Unnecessary cast
  "S301",    # Pickle usage
  "SIM101",  # Multiple isinstance calls
  "SIM102",  # Nested if statements
  "SIM103",  # Return bool directly
  "SIM110",  # Use any/all
  "SIM115",  # Open context manager
  "SIM118",  # Dict keys iteration
  "TD001",   # Invalid TODO tag
  "TD004",   # Missing TODO colon
  "TRY002",  # Raise vanilla exception
  "TRY201",  # Use raise without exception
  "TRY301",  # Abstract raise to inner function
  "TRY400",  # Use logging.exception
]
preview = true
select = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"t/**" = [
  "B017",    # Assert blind exception - tests sometimes need broad catches
  "PERF401", # List comprehension vs for loop - readability in tests
  "PLR0133", # Constant comparison - test assertions
  "PLR0913", # Too many arguments in test fixtures
  "PLR2004", # Magic values in tests are fine
  "PT006",   # Parametrize tuple format - legacy tests
  "PT011",   # pytest.raises too broad - legacy tests
  "S101",    # assert in tests
]

[tool.pytest.ini_options]
testpaths = ["t/unit"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_classes = ["Test*", "test_*"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["kombu"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
