[project]
name = "kombu-asyncio"
version = "6.0.0a2"
description = "Pure asyncio messaging library for Python"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
keywords = [
  "async",
  "asyncio",
  "celery",
  "messaging",
  "python",
  "queue",
  "redis",
]
authors = [{ name = "Ask Solem", email = "auvipy@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Communications",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Changelog = "https://github.com/oliverhaas/kombu/blob/main-asyncio/Changelog.rst"
Source = "https://github.com/oliverhaas/kombu"

[project.optional-dependencies]
# Transport dependencies
amqp = ["aio-pika>=9.0.0"]
redis = ["redis>=7.1.0"]
# Serialization formats
msgpack = ["msgpack"]
yaml = ["PyYAML>=3.10"]

[dependency-groups]
dev = [
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "pytest-mock==3.15.1",
  "pytest-xdist==3.8.0",
  "redis>=7.1.0",
  "ruff==0.15.2",
  "ty==0.0.18",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kombu"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A001",     # Variable shadowing builtin (type, format, etc.) — messaging API patterns
  "A002",     # Argument shadowing builtin — messaging API naming (type, format, id)
  "A004",     # Import shadowing builtin
  "ANN",      # Type annotations — will add incrementally (separate task)
  "ARG002",   # Unused args: API compat, overrides, signal handlers
  "ASYNC109", # timeout param is message TTL, not asyncio.timeout
  "BLE001",   # Blind except: needed for transport error handling and graceful degradation
  "C901",     # Complex structure: some messaging functions are inherently complex
  "COM812",   # Conflicts with ruff-format
  "D",        # Docstrings — will add incrementally
  "E501",     # Line length handled by config
  "EM",       # Exception strings inline are fine
  "FBT",      # Boolean params match messaging APIs (no_ack, auto_delete, durable, etc.)
  "FIX002",   # TODO comments — allowed during development
  "N801",     # Class naming: QoS, oid_from etc. follow messaging conventions
  "N802",     # Function naming: follows messaging conventions
  "N803",     # Argument naming: follows messaging conventions
  "N806",     # Variable naming: follows messaging conventions
  "N812",     # Lowercase imported as non-lowercase
  "N818",     # Exception naming: follows kombu conventions
  "PERF203",  # try/except in loop is fine here
  "PLC0415",  # Dynamic imports for optional dependencies (aio-pika, redis, etc.)
  "PLR0912",  # Too many branches: complex routing logic
  "PLR0913",  # Too many args — messaging APIs need many options
  "PLR1704",  # Redefining argument from local — context manager patterns
  "PLR2004",  # Magic values like 0xFFFF are protocol constants
  "PLW0603",  # Global statement: needed for module-level singletons
  "PLW1641",  # eq without hash: intentional for some entity classes
  "PLW2901",  # Redefining loop variable — sometimes intentional
  "PYI024",   # collections.namedtuple: existing patterns
  "PYI034",   # Non-self return type: __aenter__ patterns
  "PYI036",   # Bad exit annotation: __aexit__ patterns
  "RUF005",   # Tuple concatenation is clearer than unpacking
  "RUF012",   # Mutable class defaults: intentional for transport state
  "RUF059",   # Unused unpacked variable
  "S110",     # Try-except-pass: needed for graceful cleanup
  "SIM105",   # contextlib.suppress: explicit try/except is clearer
  "SIM108",   # Ternary not always clearer
  "SIM212",   # If-expr with twisted arms: style preference
  "SLF001",   # Private member access needed for transport internals
  "TC003",    # Typing-only imports: style preference
  "TD002",    # TODO author not needed
  "TD003",    # TODO issue link not needed
  "TRY003",   # Long exception messages are helpful for debugging
  "TRY300",   # return in try block is cleaner for this pattern
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # Type annotations not required in tests
  "ARG",     # Unused arguments common in fixtures
  "B017",    # assert raises broad exception — tests sometimes need this
  "PERF401", # List comprehension vs for loop — readability in tests
  "PLR0133", # Constant comparison — test assertions
  "PT006",   # Parametrize tuple style is preference
  "PT011",   # Broad pytest.raises okay in some tests
  "PT018",   # Compound assertions okay in tests
  "PTH",     # pathlib not required in tests
  "S101",    # assert in tests
  "S301",    # pickle in tests is fine
  "TRY301",  # raise within try — test patterns
]

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = false

[[tool.mypy.overrides]]
module = "aio_pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=kombu --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
xfail_strict = true
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
branch = true
source = ["kombu"]
omit = ["*/__init__.py"]

[tool.coverage.report]
precision = 2
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
